<resources>
    <string name="app_name">Módulo Almacén</string>
    <string name="trying_to_connect_with">Intentando conectar con el servidor …</string>
    <string name="try_again">Reintentar</string>
    <string name="failed_to_connect">No se pudo conectar con el servidor</string>
    <string name="traer">Traer</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="nuevo">Nuevo</string>
    <string name="supply">Añadir</string>
    <string name="filtrar">Filtrar</string>
    <string name="ajustes">Ajustes</string>
    <string name="minimo">Minimo</string>
    <string name="pack">Pack</string>
    <string name="cantidad">Cantidad</string>
    <string name="settings">Ajustes</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="ip_address">Dirección IP</string>
    <string name="server_ip_address">Dirección IP del servidor</string>
    <string name="port">Puerto</string>
    <string name="discard">Descartar cambios</string>
    <string name="discard_changes">¿Estás seguro de que quieres descartar los cambios?</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="tabla_sin_contenido">Tabla sin contenido</string>
    <string name="modulo_almacen">Modulo Almacén</string>
    <string name="almacen">Almacén</string>
    <string name="seguro_de_eliminar">¿Estás seguro de eliminar \'%1$s\' del almacén?</string>
    <string name="eliminar">Eliminar</string>
    <string name="nuevo_elemento">Nuevo elemento</string>
    <string name="field_cannot_be_empty">Debes ingresar un valor</string>
    <string name="invalid_number">Valor no valido</string>
    <string name="editar_elemento">Editar elemento</string>
    <string name="add_to_warehouse">Añadir al almacén</string>
    <string name="traer_del_almacen">Traer del almacén</string>
    <string name="invalid_ip_address">Dirección IP no válida</string>
    <string name="invalid_port">Puerto no válido</string>
    <string name="error_fetching_data">Error al cargar los datos</string>
    <string name="nombre">Nombre</string>
    <string name="btn_more_content_description">Despliega un menú con opciones para el producto</string>
    <string name="fab_options_content_description">Navega a la pantalla de configuración</string>
    <string name="number_picker_content_description">Muestra un dialogo para seleccionar la cantidad</string>
    <string name="server_connection_error">Error de conexión con el servidor</string>
    <string name="retry">Reintentar</string>
    <string name="no_hay_stock">No hay stock</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="marcar_como_leidas">Marcar como leidas</string>
</resources>