<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.view.dialogs.CreateItemDialogFragment">

    <EditText
        android:id="@+id/edit_text_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/nombre"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_text_cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_text_pack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pack"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_text_minimo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/minimo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

</LinearLayout>